CHANGE LOG

2018-12-21 AIM Version 3.1 for BATTLETECH 1.3.2

* New: Consolidate weapon cheevons.
* New: Show margin of miss in damage floatie.
* New: Fix squared called shot multiplier.
* New: Fix weapon stats on game load (non-json-based).
* New: Acted mechwarriors will have their names greyed out in mech tray.
* Del: FixGreyHeadDisease removed since it is fixed in 1.3.
* Mod: Unit tonnage is now always displayed with abbreviated weight, ShowUnitTonnage setting is deprecated.
* Mod: Target panel shows min distance when no PC is selected.
* Mod: Target panel's callout view now shows skills and stab to match weapon panel's stab display.
* Fix: Fix a potential crash on load game.
* Fix: Fix a bug that can cause movement dots and paths to not show up.
* Fix: Fix a NRE logged when mouse hovering the total damage slot.

2018-11-14 AIM Version 3.0 for BATTLETECH 1.2.1

* New: Press F1 to F4 to select player mech.
* New: Shift+Tab or Shift+Click (multi-target) to select in reverse direction.
* New: Ctrl+Click a weapon in multi-target to quickly enable/disable it.
* New: Bigger and more terrain dots in stronger colours.
* New: Set nameplate text colours.
* New: Show wounds or health in mechwarrior names.
* New: See target skills with callout toggle.
* New: Add L and R label to paper dolls.
* New: Line of sight colour (hue and brightness) animation.
* New: Use indirect fire when better than direct fire.
* New: Colour weapon and show damage in weapon loadout list.
* New: Show melee and dfa damage in weapon loadout list.
* New: Show short range and long range firepower above weapon loadout list.
* New: Apply damage reduction in weapon panel, compatible with WeaponRealizer.
* New: Show total weapon damage (before and after accuracy).
* New: Show stability damage with callout toggle (Left Alt).
* New: Show rare weapon properties and weapon range in meters in weapon mouseover.
* New: Reverse To-Hit modifier sign, positive bonus / negative penalty like mech bay.