@@ -2,7 +2,7 @@
    "Name" : "AIM: Attack Improvement Mod",
    "Enabled" : true,
 
-   "Version" : "3.1",
+   "Version" : "3.2 dev",
    "Description" : "For BattleTech 1.3.2. Fix, enhance, and upgrade the attack experience, from Line of Sight to Hit Distribution. Each feature can be configured individually.",
    "Author" : "Sheepy",
    "Website" : "https://github.com/Sheep-y/Attack-Improvement-Mod/",
