@@ -1,5 +1,9 @@
 CHANGE LOG
 
+????-??-?? AIM Version 3.2 development for BATTLETECH 1.3.2
+
+* New: Show structure and armour in called shot popup.
+
 2018-12-21 AIM Version 3.1 for BATTLETECH 1.3.2
 
 * New: Consolidate weapon cheevons.
